# Stacks-IDE

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
core/: CMakeLists.txt  README.md
core/include/stacks/: pty.hpp  runner.hpp
core/src/: pty_posix.cpp  pty_win.cpp  runner.cpp  server.cpp
linux/: CMakeLists.txt  main.cpp
scripts/: dev.ps1  dev.sh
web/: app.js  index.html  style.css
web/assets/: backend.js  templates.js  vfs.js
windows/: CMakeLists.txt  main.cpp
